syntax = "proto3";

package vendor;

message Vendor {
  int64 id = 1;
  string userId = 2;
  string name = 3;
  string description = 4;
  string createdAt = 5;
  string updatedAt = 6;
  string imageUrl = 7;
  string imageId = 8;
  string backgroundImageUrl = 9;
  string backgroundImageId = 10;
}

message FileInput {
  string url = 1;
  string fileId = 2;
}

message CreateVendorInput {
  string name = 1;
  string description = 2;
  FileInput image = 3;
  FileInput background = 4;
}

message DescInput {
  string desc = 1;
}

message NoArgument {}

service VendorService {
  rpc CreateVendorAccount(CreateVendorInput) returns (Vendor) {}
  rpc UpdateVendorImg(FileInput) returns (Vendor) {}
  rpc UpdateVendorBg(FileInput) returns (Vendor) {}
  rpc UpdateDesc(DescInput) returns (Vendor) {}
  rpc Me(NoArgument) returns (Vendor) {}
}